# ChangeLog for net-libs/libtorrent
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.72 2006/10/27 16:12:48 flameeyes Exp $

*libtorrent-0.10.4 (27 Oct 2006)

  27 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  +libtorrent-0.10.4.ebuild:
  Version bump.

*libtorrent-0.10.3-r1 (19 Oct 2006)

  19 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  +libtorrent-0.10.3-r1.ebuild:
  Replace -O2 with -O3 on x86 systems running GCC 4.1. Closes bug #151221.

*libtorrent-0.10.3 (05 Oct 2006)

  05 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  -libtorrent-0.10.2.ebuild, +libtorrent-0.10.3.ebuild:
  Version bump, remove old broken release.

  24 Sep 2006; Michael Hanselmann <hansmi@gentoo.org>
  libtorrent-0.10.0.ebuild:
  Stable on ppc.

*libtorrent-0.10.2 (14 Sep 2006)

  14 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  +libtorrent-0.10.2.ebuild:
  Version bump.

  09 Sep 2006; Torsten Veller <tove@gentoo.org> libtorrent-0.10.0.ebuild:
  Stable on x86 (#146845)

  09 Sep 2006; Thomas Cort <tcort@gentoo.org> libtorrent-0.10.0.ebuild:
  Stable on amd64 wrt Bug #146845.

  08 Sep 2006; Markus Rothe <corsair@gentoo.org> libtorrent-0.10.0.ebuild:
  Stable on ppc64; bug #146845

*libtorrent-0.10.1 (31 Aug 2006)

  31 Aug 2006; Diego Pettenò <flameeyes@gentoo.org>
  +libtorrent-0.10.1.ebuild:
  Version bump, thanks to Daniel Webert and CJ Kucera, bug #144926 and #145384.

  21 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  -libtorrent-0.8.3.ebuild:
  Drop old version.

  20 Jul 2006; Markus Rothe <corsair@gentoo.org> libtorrent-0.9.3.ebuild:
  Stable on ppc64; bug #139716

  10 Jul 2006; Joshua Jackson <tsunam@gentoo.org> libtorrent-0.9.3.ebuild:
  Stable x86; bug #139716

  10 Jul 2006; Daniel Gryniewicz <dang@gentoo.org> libtorrent-0.9.3.ebuild:
  Marked stable on amd64 per bug #139716

  09 Jul 2006; Joseph Jezak <josejx@gentoo.org> libtorrent-0.9.3.ebuild: