@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/Attic/libtorrent-0.10.4.ebuild,v 1.1 2006/10/27 16:12:48 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/Attic/libtorrent-0.10.4.ebuild,v 1.2 2006/11/20 09:39:24 opfer Exp $
 
 inherit eutils toolchain-funcs flag-o-matic libtool
 
@@ -22,7 +22,7 @@ src_compile() {
 	replace-flags -Os -O2
 
 	if [[ $(tc-arch) = "x86" ]]; then
-		filter-flags -fomit-frame-pointer
+		filter-flags -fomit-frame-pointer -fforce-addr
 
 		# See bug #151221. It seems only to hit on GCC 4.1 and x86 architecture
 		# it could be safer to fallback to -O1, but with the high use of STL in
