@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/rtorrent
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.63 2006/10/27 16:12:49 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.64 2006/11/20 09:42:07 opfer Exp $
+
+  20 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
+  rtorrent-0.6.4.ebuild:
+  filtered -fforce-addr on x86, as reported by parafin-spobs@yandex.ru in bug
+  #155679
 
 *rtorrent-0.6.4 (27 Oct 2006)
 
