@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/libtorrent
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.72 2006/10/27 16:12:48 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.73 2006/11/20 09:39:24 opfer Exp $
+
+  20 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
+  libtorrent-0.10.4.ebuild:
+  -m filtered -fforce-addr on x86, as reported by parafin-spobs@yandex.ru in
+  bug #155679 commit
 
 *libtorrent-0.10.4 (27 Oct 2006)
 
